# ctream

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  classctream_1_1collectors_1_1Collector-members.html  classctream_1_1collectors_1_1Collector.html  classctream_1_1collectors_1_1Collector__inherit__graph.map  classctream_1_1collectors_1_1Collector__inherit__graph.md5  classctream_1_1collectors_1_1Concat-members.html  classctream_1_1collectors_1_1Concat.html  classctream_1_1collectors_1_1Concat__coll__graph.md5  classctream_1_1collectors_1_1Concat__inherit__graph.map  classctream_1_1collectors_1_1Custom-members.html  classctream_1_1collectors_1_1Custom.html  classctream_1_1collectors_1_1Custom__coll__graph.map  classctream_1_1collectors_1_1Custom__coll__graph.md5  classctream_1_1collectors_1_1Max-members.html  classctream_1_1collectors_1_1Max.html  classctream_1_1collectors_1_1Max__inherit__graph.map  classctream_1_1collectors_1_1Max__inherit__graph.md5  classctream_1_1collectors_1_1Min-members.html  classctream_1_1collectors_1_1Min.html  classctream_1_1collectors_1_1Min__coll__graph.map  classctream_1_1collectors_1_1Min__coll__graph.md5  classctream_1_1collectors_1_1Product-members.html  classctream_1_1collectors_1_1Product.html  classctream_1_1collectors_1_1Product__coll__graph.map  classctream_1_1collectors_1_1Product__inherit__graph.md5  classctream_1_1collectors_1_1Sum-members.html  classctream_1_1collectors_1_1Sum.html  (+59 more)
examples/: bigLoop.cpp  maxInt.cpp
include/: ctream.hpp
test/: benchmarks.cpp  testCollectors.cpp  testCtream.cpp
(+65 files in other folders)
